# election-backend

./: README.md  requirements.txt
backend/: db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
backend/announcementController/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/announcementController/migrations/: 0001_initial.py
backend/applications_pdf/: admin.py  apps.py  models.py  urls.py  views.py
backend/approvementController/: apps.py  serializers.py  urls.py  views.py
backend/authcontroller/: apps.py  models.py  serializers.py  urls.py  views.py
backend/authcontroller/migrations/: 0001_initial.py  0002_user_role.py
backend/candidateController/: apps.py  models.py  serializers.py  urls.py  views.py
backend/candidateController/migrations/: 0001_initial.py  0002_candidate_grade_candidate_name_candidate_surname.py  0003_candidate_vote_count.py  0004_candidate_is_winner.py  0005_candidate_is_rejected.py  0006_alter_candidate_grade.py  0007_remove_candidate_is_rejected.py  (+4 more)
backend/dateController/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/documentController/: apps.py  models.py  urls.py  views.py
backend/election_system_316/: asgi.py  corsmiddleware.py  settings.py  urls.py  wsgi.py
backend/extraUserController/: apps.py  models.py  serializers.py  urls.py  views.py
backend/login/: models.py  serializers.py  urls.py  views.py
backend/messageController/: apps.py  models.py  urls.py  views.py
backend/voteController/: apps.py  models.py  serializers.py  urls.py  views.py
(+18 files in other folders)
