[tool.poetry]
name = "election-system-316"
version = "0.1.0"
description = ""
authors = ["Malik Hinnawi <malikhinnawi01@gmail.com>"]
readme = "README.md"
packages = [{include = "election_system_316"}]

[tool.poetry.dependencies]
python = "^3.10"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
