[tool.poetry]
name = "election-system-316"
version = "0.1.0"
description = ""
authors = ["Malik Hinnawi <malikhinnawi01@gmail.com>"]
readme = "README.md"
packages = [{include = "election_system_316"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "~3.2.0"
djangorestframework = "*"
pyyaml = "*"
requests = "*"
django_cors_headers = "*"
setuptools = "*"
zeep = "*"
poetry = "^1.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
